; ModuleID = '/home/carl/AnghaBench/linux/drivers/ata/extr_libata-scsi.c_ata_scsiop_inq_b1.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ata/extr_libata-scsi.c_ata_scsiop_inq_b1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_scsi_args = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ata_scsi_args*, i32*)* @ata_scsiop_inq_b1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ata_scsiop_inq_b1(%struct.ata_scsi_args* %0, i32* %1) #0 {
  %3 = alloca %struct.ata_scsi_args*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.ata_scsi_args* %0, %struct.ata_scsi_args** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load %struct.ata_scsi_args*, %struct.ata_scsi_args** %3, align 8
  %9 = getelementptr inbounds %struct.ata_scsi_args, %struct.ata_scsi_args* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @ata_id_form_factor(i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load %struct.ata_scsi_args*, %struct.ata_scsi_args** %3, align 8
  %13 = getelementptr inbounds %struct.ata_scsi_args, %struct.ata_scsi_args* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @ata_id_rotation_rate(i32 %14)
  store i32 %15, i32* %6, align 4
  %16 = load %struct.ata_scsi_args*, %struct.ata_scsi_args** %3, align 8
  %17 = getelementptr inbounds %struct.ata_scsi_args, %struct.ata_scsi_args* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @ata_id_zoned_cap(i32 %18)
  store i32 %19, i32* %7, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 1
  store i32 177, i32* %21, align 4
  %22 = load i32*, i32** %4, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 3
  store i32 60, i32* %23, align 4
  %24 = load i32, i32* %6, align 4
  %25 = ashr i32 %24, 8
  %26 = load i32*, i32** %4, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 4
  store i32 %25, i32* %27, align 4
  %28 = load i32, i32* %6, align 4
  %29 = load i32*, i32** %4, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 5
  store i32 %28, i32* %30, align 4
  %31 = load i32, i32* %5, align 4
  %32 = load i32*, i32** %4, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 7
  store i32 %31, i32* %33, align 4
  %34 = load i32, i32* %7, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %41

36:                                               ; preds = %2
  %37 = load i32, i32* %7, align 4
  %38 = shl i32 %37, 4
  %39 = load i32*, i32** %4, align 8
  %40 = getelementptr inbounds i32, i32* %39, i64 8
  store i32 %38, i32* %40, align 4
  br label %41

41:                                               ; preds = %36, %2
  ret i32 0
}

declare dso_local i32 @ata_id_form_factor(i32) #1

declare dso_local i32 @ata_id_rotation_rate(i32) #1

declare dso_local i32 @ata_id_zoned_cap(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
